--- a/DVGB07_MediaStore/DVGB07_MediaStore.csproj
+++ b/DVGB07_MediaStore/DVGB07_MediaStore.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Dialogs\AddMovieForm.Designer.cs">
       <DependentUpon>AddMovieForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\AmountForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\AmountForm.Designer.cs">
+      <DependentUpon>AmountForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Products\Book.cs" />
     <Compile Include="CSVHandler.cs" />
     <Compile Include="InventoryControl.cs">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\AddMovieForm.resx">
       <DependentUpon>AddMovieForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\AmountForm.resx">
+      <DependentUpon>AmountForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InventoryControl.resx">
       <DependentUpon>InventoryControl.cs</DependentUpon>
