--- a/DVGB07_MediaStore/DVGB07_MediaStore.csproj
+++ b/DVGB07_MediaStore/DVGB07_MediaStore.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cart.cs" />
     <Compile Include="Dialogs\AddBookForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +91,12 @@
     <Compile Include="Products\Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoreControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="StoreControl.Designer.cs">
+      <DependentUpon>StoreControl.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Dialogs\AddBookForm.resx">
       <DependentUpon>AddBookForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +124,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="StoreControl.resx">
+      <DependentUpon>StoreControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="products.csv" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
